<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/welcome_image_desc"
        android:src="@drawable/ic_cuate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name"
        style="@style/DetailProfileNameTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:text="Fajar Mukhollis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_image" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="@dimen/icon_in_user_size"
        android:layout_height="@dimen/icon_in_user_size"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/email_icon_description"
        android:src="@drawable/ic_baseline_email_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <TextView
        android:id="@+id/user_email"
        style="@style/DetailProfileTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="xxxxx@gmail.com"
        app:layout_constraintBottom_toBottomOf="@+id/email_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/email_icon"
        app:layout_constraintTop_toTopOf="@+id/email_icon" />

    <ImageView
        android:id="@+id/status_icon"
        android:layout_width="@dimen/icon_in_user_size"
        android:layout_height="@dimen/icon_in_user_size"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/status_icon_description"
        android:src="@drawable/ic_baseline_work_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_icon" />

    <TextView
        android:id="@+id/user_status"
        style="@style/DetailProfileTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Mahasiswa"
        app:layout_constraintBottom_toBottomOf="@+id/status_icon"
        app:layout_constraintEnd_toEndOf="@+id/user_email"
        app:layout_constraintStart_toStartOf="@+id/user_email"
        app:layout_constraintTop_toTopOf="@+id/status_icon" />

    <ImageView
        android:id="@+id/desc_icon"
        android:layout_width="@dimen/icon_in_user_size"
        android:layout_height="@dimen/icon_in_user_size"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/desc_icon_description"
        android:src="@drawable/ic_baseline_description_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_icon" />

    <TextView
        android:id="@+id/user_desc"
        style="@style/DetailProfileTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Deskripsi :"
        app:layout_constraintBottom_toBottomOf="@+id/desc_icon"
        app:layout_constraintEnd_toEndOf="@+id/user_email"
        app:layout_constraintStart_toStartOf="@+id/user_email"
        app:layout_constraintTop_toTopOf="@+id/desc_icon" />

    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:id="@+id/txt_desc"-->
    <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="120dp"-->
    <!--        android:layout_marginHorizontal="15dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:gravity="center"-->
    <!--        android:hint="@string/masukkan_deskripsi_anda"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/icn_desc">-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:id="@+id/edt_desc"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="103dp"-->
    <!--            tools:ignore="TextContrastCheck" />-->
    <!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_btn"
        style="@style/GreenButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_desc"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>